--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
     	            <tr>
     	                 <td>: wq</td>
     	                 <td>permet de quitter en sauvegardant</td>
-    	                 <td></td>
     	            </tr>
     	            <tr>
-    	                 <td></td>
-    	                 <td></td>
+    	                 <td>: wq <em>nom de dossier</em></td>
+    	                 <td>permet d'enregistrer dans le dossier spécifié et de quitter</td>
     	                 <td></td>
     	            </tr>
     	        </tbody>
