--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           <h1>Quelques commandes utiles de Vim</h1>
     </div>
 
-<h2>Première chose avec Vim, une fois ouvert, nous avons envie de <strong>quitter</strong> !</h2>
+<h3>Première chose avec Vim, une fois ouvert, nous avons envie de <strong>quitter</strong> !</h3>
     <table>
     	        <tbody>
     	            <tr>
@@ -24,9 +24,37 @@
     	            <tr>
     	                 <td>: wq <em>nom de dossier</em></td>
     	                 <td>permet d'enregistrer dans le dossier spécifié et de quitter</td>
-    	                 <td></td>
     	            </tr>
     	        </tbody>
     	    </table>
+  <h3>Taper du texte dans Vim</h3>
+  <table>
+            <tbody>
+                <tr>
+                    <td>i</td>
+                     <td>permet d'insérer du texte</td>
+                </tr>
+                <tr>
+                     <td>a</td>
+                     <td>permet d'ajouter du texte</td>
+                </tr>
+            </tbody>
+    </table>
+  <h3>Supprimer du texte</h3>
+  <table>
+            <tbody>
+                <tr>
+                    <td>x</td>
+                     <td>permet de supprimer une lettre après le curseur</td>
+                </tr>
+                <tr>
+                     <td>dw</td>
+                     <td>permet de supprimer le mot (curseur au début du mot)</td>
+                </tr>
+                <tr>
+                    <td>d$</td>
+                     <td>permet de supprimer du texte jusqu'à la fin de la ligne (après le mot où se trouve le curseur)</td>
+                </tr>
+            </tbody>
   </body>
 </html>
