--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <table>
     	        <tbody>
     	            <tr>
-    	                <td>: wq</td>
+    	                <td>: q!</td>
     	                 <td>permet de quitter Vim</td>
     	            </tr>
     	            <tr>
@@ -27,7 +27,7 @@
     	            </tr>
     	        </tbody>
     	    </table>
-  <h3>Taper du texte dans Vim</h3>
+  <h3>Tapons du texte dans Vim</h3>
   <table>
             <tbody>
                 <tr>
@@ -40,7 +40,28 @@
                 </tr>
             </tbody>
     </table>
-  <h3>Supprimer du texte</h3>
+  <h3>Déplaçons-nous dans Vim</h3>
+  <table>
+    <tbody>
+      <tr>
+        <td><em>h, k, l, j</e></td>
+        <td>se déplacer (respectivement) à <em>gauche, haut, droite, bas</em></td>
+      </tr>
+      <tr>
+        <td>0</td>
+        <td>déplacer le curseur en début de ligne</td>
+      </tr>
+      <tr>
+        <td><em>n</em>w</td>
+        <td>déplacer le curseur de <em>n</em> mots vers l'avant</td>
+      </tr>
+      <tr>
+        <td><em>n</em>e</td>
+        <td>déplacer le curseur à la fin du <em>nième</em> mot vers l'avant</td>
+      </tr>
+    </tbody>
+  </table>
+  <h3>Supprimons du texte</h3>
   <table>
             <tbody>
                 <tr>
@@ -54,6 +75,18 @@
                 <tr>
                     <td>d$</td>
                      <td>permet de supprimer du texte jusqu'à la fin de la ligne (après le mot où se trouve le curseur)</td>
+                </tr>
+                <tr>
+                    <td>dw</td>
+                     <td>permet de supprimer jusque la fin du mot courant</td>
+                </tr>
+                <tr>
+                  <td>de</td>
+                  <td>effacer jusqu'au début du prochain mot</td>
+                </tr>
+                <tr>
+                  <td>d$</td>
+                  <td>effacer jusqu'à la fin de la ligne</td>
                 </tr>
             </tbody>
   </body>
