--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
                   <td>d$</td>
                   <td>effacer jusqu'à la fin de la ligne</td>
                 </tr>
+                <tr>
+                  <td>dd</td>
+                  <td>effacer la ligne complète (peut correspondre à "couper")</td>
+                </tr>
             </tbody>
   </body>
 </html>
