--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="en-tete">
-          <h1>Quelques commandes utiles de Vim -CheatSheets -</h1>
+          <h1><a name="top"> Quelques commandes utiles de Vim -CheatSheets -</a></h1>
     </div>
     <ul id="nav"><!--
 	--><li><a href="#quitter" style="text-decoration:none">Quitter</a></li><!--
@@ -19,6 +19,7 @@
   --><li><a href="#annuler" style="text-decoration:none">Annuler</a></li>
 </ul>
 <h3>Première chose avec Vim, une fois ouvert, nous avons envie de <strong><a name="quitter">quitter</a></strong> !</h3>
+<a href="#top" class="top">Haut de page</a>
     <table>
     	        <tbody>
     	            <tr>
