--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
       <link rel="stylesheet" href="css/vim.css" />
-      <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
+      <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
     <title>Cheatsheets Vim</title>
 
   </head>
@@ -58,8 +58,8 @@
                      <td>permet de remplacer un caractère par  la lettre choisie</td>
                 </tr>
                 <tr>
-                     <td>ce</em></td>
-                     <td>permet de changer un mot à patir du caractère sur lequel est le curseur</td
+                     <td><em>ce</em></td>
+                     <td>permet de changer un mot à patir du caractère sur lequel est le curseur</td>
                 </tr>
 
             </tbody>
@@ -68,7 +68,7 @@
   <table>
     <tbody>
       <tr>
-        <td><em>h, k, l, j</e></td>
+        <td><em>h, k, l, j</em></td>
         <td>se déplacer (respectivement) à <em>gauche, haut, droite, bas</em></td>
       </tr>
       <tr>
