--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <div id="en-tete">
-          <h1><a name="top"> <img id="logovim" src="/home/thomascavalar/sites/lab/cheatsheets/vim/Vim-editor_logo.png" alt="logo vim" /> Quelques commandes utiles de Vim -CheatSheets-</a></h1>
+          <img id="logovim" src="/home/thomascavalar/sites/lab/cheatsheets/vim/Vim-editor_logo.png" alt="logo vim" />
+          <h1><a name="top">  Quelques commandes utiles de Vim -CheatSheets-</a></h1>
     </div>
 <ul id="nav"><!--
 	--><li><a href="#quitter" style="text-decoration:none">Quitter</a></li><!--
