--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
       <link rel="stylesheet" href="css/vim.css" />
       <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
+      <link rel="shortcut icon" href="favicon.ico" >
+      <link rel="shortcut icon" href="favicon.ico">
+      <link rel="icon" type="image/gif">
     <title>Cheatsheets Vim</title>
 
   </head>
