--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/vim.css" />
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="shortcut icon" href="favicon.ico">
     <link rel="icon" type="image/gif">
     <title>Cheatsheets Vim</title>
 
@@ -35,15 +34,15 @@
     <table>
         <tbody>
             <tr>
-                <td>: q!</td>
+                <td><code>: q!</code></td>
                 <td>permet de quitter Vim</td>
             </tr>
             <tr>
-                <td>: wq</td>
+                <td><code>: wq</code></td>
                 <td>permet de quitter en sauvegardant</td>
             </tr>
             <tr>
-                <td>: wq
+                <td><code>: wq</code>
                     <em>nom de dossier</em>
                 </td>
                 <td>permet d'enregistrer dans le dossier spécifié et de quitter</td>
@@ -55,27 +54,27 @@
     <table>
         <tbody>
             <tr>
-                <td>i</td>
+                <td><code>i</code></td>
                 <td>permet d'insérer du texte</td>
             </tr>
             <tr>
-                <td>a</td>
+                <td><code>a</code></td>
                 <td>permet d'ajouter du texte</td>
             </tr>
             <tr>
-                <td>p</td>
+                <td><code>p</code></td>
                 <td>permet de coller du texte</td>
                 <!--second notion-->
             </tr>
             <tr>
-                <td>r
+                <td><code>r</code>
                     <em>lettre</em>
                 </td>
                 <td>permet de remplacer un caractère par la lettre choisie</td>
             </tr>
             <tr>
                 <td>
-                    <em>ce</em>
+                    <em><code>ce</code></em>
                 </td>
                 <td>permet de changer un mot à patir du caractère sur lequel est le curseur</td>
             </tr>
@@ -89,14 +88,14 @@
             <tbody>
                 <tr>
                     <td>
-                        <em>h, k, l, j</em>
+                        <em><code>h, k, l, j</code></em>
                     </td>
                     <td>se déplacer (respectivement) à
                         <em>gauche, haut, droite, bas</em>
                     </td>
                 </tr>
                 <tr>
-                    <td>0</td>
+                    <td><code></code></td>
                     <td>déplacer le curseur en début de ligne</td>
                 </tr>
                 <tr>
@@ -119,33 +118,33 @@
     <table>
         <tbody>
             <tr>
-                <td>x</td>
+                <td><code>x</code></td>
                 <td>permet de supprimer une lettre après le curseur</td>
             </tr>
             <tr>
-                <td>dw</td>
+                <td><code>dw</code></td>
                 <td>permet de supprimer le mot (curseur au début du mot)</td>
                 <!--fourth notion-->
             </tr>
             <tr>
-                <td>d$</td>
+                <td><code>d$</code></td>
                 <td>permet de supprimer du texte jusqu'à la fin de la ligne (après le mot où se trouve le curseur)</td>
             </tr>
             <tr>
-                <td>dw</td>
+                <td><code>dw</code></td>
                 <td>permet de supprimer jusque la fin du mot courant</td>
             </tr>
             <tr>
-                <td>de</td>
+                <td><code>de</code></td>
                 <td>effacer jusqu'au début du prochain mot</td>
                 <!--fifth notion-->
             </tr>
             <tr>
-                <td>d$</td>
+                <td><code>d$</code></td>
                 <td>effacer jusqu'à la fin de la ligne</td>
             </tr>
             <tr>
-                <td>dd</td>
+                <td><code>dd</code></td>
                 <td>effacer la ligne complète (peut correspondre à "couper")</td>
             </tr>
 
@@ -156,20 +155,20 @@
     <table>
         <tbody>
             <tr>
-                <td>u
+                <td><code>u</code>
                     <em>min</em>
                 </td>
                 <td>permet d'annuler la dernière commande</td>
             </tr>
             <tr>
-                <td>u
+                <td><code>u</code>
                     <em>maj</em>
                 </td>
                 <td>permet d'annuler tous les changements sur une ligne</td>
                 <!--sixth notion-->
             </tr>
             <tr>
-                <td>ctrl r</td>
+                <td><code>ctrl r</code></td>
                 <td>permet d'annuler l'annulation</td>
             </tr>
         </tbody>
